lab-advanced-regex

--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,10 +36,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'i', 'o', 'i', 'o', 'e', 'a', 'e', 'e', 'e', 'i', 'a', 'o', 'o', 'u', 'e', 'o', 'o', 'e', 'i', 'i']\n"
+     ]
+    }
+   ],
+   "source": [
+    "vowels = re.findall('[aeiou]', text)\n",
+    "print(vowels)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +70,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['puppy', 'puppies', 'puppy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "puppy = re.findall('pupp\\w+', text)\n",
+    "print(puppy)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,10 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ran', 'run']\n"
+     ]
+    }
+   ],
+   "source": [
+    "run = re.findall('r[a-z]n', text)\n",
+    "print(run)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ran', 'relay', 'race', 'run']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(\"r\\w+\", text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,10 +165,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a sentence with special characters in it.\n"
+     ]
+    }
+   ],
+   "source": [
+    "replace = re.sub(\"!\", \"i\", text )\n",
+    "print(replace)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,10 +199,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['This', 'sentence', 'words', 'varying', 'lengths']\n"
+     ]
+    }
+   ],
+   "source": [
+    "charact4 = re.findall('\\w{4,}', text)\n",
+    "print(charact4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,10 +233,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' bet', 'robot ', ' beat', ' bot', ' bat', ' but', ' bit']\n"
+     ]
+    }
+   ],
+   "source": [
+    "letters = re.findall(\"\\w+b\\w+ | b\\w+\", text)\n",
+    "print(letters)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,10 +267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['peaks ', ' people', 'realize ', 'breathtaking ', 'Nearly ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ea_eo = re.findall('\\w+ea\\w+ | \\w+eo\\w+', text)\n",
+    "print(ea_eo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,10 +301,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Teddy', 'Roosevelt', 'Abraham', 'Lincoln']\n"
+     ]
+    }
+   ],
+   "source": [
+    "capitals = re.findall(\"[A-Z]\\w+\", text)\n",
+    "print(capitals)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,10 +326,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Teddy Roosevelt', 'Abraham Lincoln']\n"
+     ]
+    }
+   ],
+   "source": [
+    "capitalsets = re.findall(\"[A-Z]\\w+(?=\\s[A-Z])(?:\\s)[A-Z]\\w+\", text)\n",
+    "\n",
+    "print(capitalsets)\n",
+    "\n",
+    "#QUESTION: que significa el (?: ???\"non-capturing group\"????"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,10 +365,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['He', 'Da']\n"
+     ]
+    }
+   ],
+   "source": [
+    "quotes = re.findall(\"[A-Z][a-z]\", text)\n",
+    "\n",
+    "print(quotes)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,10 +400,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['30', '30', '14', '16', '10']\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = re.findall('\\d+', text)\n",
+    "print(numbers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -287,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,10 +437,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['876932289', '098325295']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ss = text.replace('-', '')\n",
+    "numbers_ss = re.findall('\\d{9}', ss)\n",
+    "print(numbers_ss)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -313,10 +463,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['8477890984', '9872220901']\n"
+     ]
+    }
+   ],
+   "source": [
+    "phones = text.replace('-', '').replace(\")\", \"\")\n",
+    "numbers_phone = re.findall('\\d{10}', phones)\n",
+    "print(numbers_phone)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -327,10 +490,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' 876-93-2289', '(847)789-0984', ' 098-32-5295', '(987)222-0901']\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_numbers = re.findall('[^a-z]\\d+[^a-z]\\d+[^a-z]\\d+', text)\n",
+    "print(all_numbers)\n",
+    "\n",
+    "#COMMENT: pongo el print cada vez por acostumbrarme a crear variables cada vez que resuelvo algo y poder acceder rapidamente en caso de que quiera"
+   ]
   }
  ],
  "metadata": {
@@ -349,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
