--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup=(\"I\",)\n"
    ]
   },
   {
@@ -33,11 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "type(tup)\n"
    ]
   },
   {
@@ -55,13 +66,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'r', 'o', 'n', 'h', 'a', 'c', 'k']\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "\n",
-    "# Your explanation here\n"
+    "list(tup)\n",
+    "lista=list(tup)\n",
+    "nueva_lista=lista + [\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"]\n",
+    "print(nueva_lista)\n"
    ]
   },
   {
@@ -79,13 +100,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "# Your explanation here\n"
+    "tupla=tuple(nueva_lista)\n",
+    "print(tupla)\n"
    ]
   },
   {
@@ -103,11 +131,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "lista1=lista[:4]\n",
+    "tup1=tuple(lista1)\n",
+    "print(tup1)\n",
+    "lista2=lista[-4:]\n",
+    "tup2=tuple(lista2)\n",
+    "print(tup2)\n"
    ]
   },
   {
@@ -121,11 +163,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'r', 'o', 'n', 'h', 'a', 'c', 'k']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "lista3=list(tup1)+list(tup2)\n",
+    "print(lista3)\n",
+    "tup3=tuple(lista3)"
    ]
   },
   {
@@ -137,11 +190,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup1=('I', 'r', 'o', 'n')\n",
+    "tup2=('h', 'a', 'c', 'k')\n",
+    "count_tup1=len(tup1)\n",
+    "count_tup2=len(tup2)\n",
+    "print(count_tup1+count_tup2)\n",
+    "count_tup3=len(tup3)\n",
+    "print(count_tup3)"
    ]
   },
   {
@@ -153,11 +222,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3=('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+    "tup3.index(\"h\")"
    ]
   },
   {
@@ -177,11 +259,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        print(\"True\")\n",
+    "    else:\n",
+    "        print(\"False\")"
    ]
   },
   {
@@ -195,12 +295,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "False\n",
+      "1\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "count=0\n",
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        print(len(i))\n",
+    "    else:\n",
+    "        print(\"False\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
